--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=PiratesLiarsDice
 
 dice.url=https://piratesliarsdice.ekstern.dev.nav.no/dice
+
+player.name1=Denys
+player.name2=Will
